make it work for 8